-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u60, 9
-
Component/s: hotspot
-
b64
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082670 | emb-9 | David Holmes | P2 | Resolved | Fixed | team |
| JDK-8086512 | 8u65 | David Holmes | P2 | Resolved | Fixed | b01 |
| JDK-8079324 | 8u60 | David Holmes | P2 | Closed | Fixed | b15 |
| JDK-8137681 | emb-8u65 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8081097 | emb-8u60 | David Holmes | P2 | Resolved | Fixed | team |
Martijn Verburg reports:
On Mac OS X 10.10.2 using gcc 4.8 run make clean images
When compiling either jdk8 or jdk9 from scratch I get the following BSD
undefined errors:
Compiling
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp:1150:7:
error: "__FreeBSD__" is not defined [-Werror=undef]
#elif __FreeBSD__
^
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp:1152:7:
error: "__OpenBSD__" is not defined [-Werror=undef]
#elif __OpenBSD__
^
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp:1154:7:
error: "__NetBSD__" is not defined [-Werror=undef]
#elif __NetBSD__
^
On Mac OS X 10.10.2 using gcc 4.8 run make clean images
When compiling either jdk8 or jdk9 from scratch I get the following BSD
undefined errors:
Compiling
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp:1150:7:
error: "__FreeBSD__" is not defined [-Werror=undef]
#elif __FreeBSD__
^
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp:1152:7:
error: "__OpenBSD__" is not defined [-Werror=undef]
#elif __OpenBSD__
^
/Users/karianna/Documents/workspace/AdoptOpenJDK_projects/jdk8/hotspot/src/os/bsd/vm/os_bsd.cpp:1154:7:
error: "__NetBSD__" is not defined [-Werror=undef]
#elif __NetBSD__
^
- backported by
-
JDK-8081097 BSD build failures due to undefined macros
-
- Resolved
-
-
JDK-8082670 BSD build failures due to undefined macros
-
- Resolved
-
-
JDK-8086512 BSD build failures due to undefined macros
-
- Resolved
-
-
JDK-8137681 BSD build failures due to undefined macros
-
- Resolved
-
-
JDK-8079324 BSD build failures due to undefined macros
-
- Closed
-