8077674: BSD build failures due to undefined macros

Reviewed-by: dsamersoff, kbarrett, hseigel